[gd_scene load_steps=3 format=3 uid="uid://dadwcxirymbsx"]

[ext_resource type="Script" uid="uid://bim7qwrq6ye51" path="res://scripts/ui/inventory/inventory_item.gd" id="1_1f4sr"]
[ext_resource type="Texture2D" uid="uid://dcduqa82fhmrm" path="res://assets/models/icons/bricks_preview.tres" id="2_oesyj"]

[node name="InventoryItem" type="Control"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 7
script = ExtResource("1_1f4sr")
metadata/_custom_type_script = "uid://bim7qwrq6ye51"

[node name="ItemTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_oesyj")
expand_mode = 1

[node name="CountLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "x99"
fit_content = true
scroll_active = false
horizontal_alignment = 2
